# sindy-shred

./: .gitignore  README.md  driver.py  miosr_utils.py  models.py  plan_Feb2.md  plotting.py  processdata.py  pyproject.toml  refactor.md  requirements.txt  sde_example.ipynb  second_order_ode_example.ipynb  sindy-shred_functionalized.sst.v2.ipynb  sindy-shred_functionalized.toy-data.refactored.ipynb  sindy-shred_functionalized.toy-data.v2.ipynb  sindy-shred_functionalized.toy-data.v2_refactor.ipynb  sindy.py  sindy_shred.py  sindy_shred_net.py  sindy_shred_shuffle.py  sindy_utils_2ndorder.py  sst_data_analysis.ipynb  sst_data_analysis_detailed.ipynb  sst_sindy_shred.ipynb  sst_sindy_shred_refactor.ipynb  stochastic_sindy.py  synthetic_data_analysis.ipynb  synthetic_data_analysis_detailed.2nd-order.ipynb  synthetic_data_analysis_detailed.ipynb  synthetic_data_analysis_detailed.py  synthetic_data_sindy_shred.ipynb  synthetic_data_sindy_shred_refactor.ipynb
notebooks/: fitzhugh_nagumo.ipynb  fitzhugh_nagumo_highlevel.ipynb  fitzhugh_nagumo_lowlevel.ipynb  sea_surface_temperature.ipynb  sindy-shred_functionalized.sst.ipynb  sst_data_analysis.ipynb  sst_data_analysis_detailed.ipynb  synthetic_data_analysis.ipynb  synthetic_data_analysis_detailed.2nd-order.ipynb  synthetic_data_analysis_detailed.ipynb  synthetic_data_analysis_detailed.miosr.ipynb  synthetic_data_analysis_detailed.py
src/sindy_shred/: __init__.py  miosr_utils.py  models.py  processdata.py  sindy.py  sindy_shred.py  sindy_shred_net.py  utils.py
